# prompt-layer-library

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  __init__.py  bucky_console.py  bucky_fc.py  bucky_fca.py  bucky_playground.py  bucky_post.py  bucky_run.py  bucky_runa.py  bucky_stream.py  conftest.py  prompt-evaluation-ambiguous-inputs.md  pyproject.toml  requirements.txt  run.py  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: integration-tests.yml  pre-commit.yaml  release.yml
features/: environment.py
features/langchain/: chat.feature  response.feature
features/openai/: chat.feature  completion.feature
features/steps/: steps.py
promptlayer/: __init__.py  config.py  exceptions.py  langchain.py  mcp_server.py  promptlayer.py  promptlayer_base.py  promptlayer_client.py  promptlayer_mixins.py  run_internal.py  span_exporter.py  template_cache.py  templates.py  utils.py
promptlayer/groups/: __init__.py  groups.py
promptlayer/integrations/claude_agents/: __init__.py  config.py
promptlayer/integrations/openai_agents/: __init__.py  ids.py  instrumentation.py  mapping.py  processor.py  time.py
promptlayer/langchain/chat_models/: __init__.py  promptlayer_openai.py
promptlayer/langchain/llms/: __init__.py  openai.py  promptlayer_openai.py
promptlayer/prompts/: __init__.py  chat.py  prompts.py
promptlayer/resources/: __init__.py  base.py  prompt.py
promptlayer/schemas/: __init__.py  openai.py  pagination.py  prompt.py
promptlayer/skills/: __init__.py  api.py  manager.py
promptlayer/streaming/: __init__.py  blueprint_builder.py  response_handlers.py  stream_processor.py
promptlayer/track/: __init__.py  error_tracking.py  track.py
promptlayer/types/: __init__.py  prompt_template.py  request_log.py  skill.py
prompts/: README.md
scripts/: vendor_claude_agents_plugin.py
tests/: conftest.py  test_anthropic_proxy.py  test_async_stream_run.py  test_builtin_tools_streaming.py  test_claude_agents_config.py  test_client_cache_invalidation.py  test_error_categorization.py  test_error_logging.py  test_error_tracking_integration.py  test_get_prompt_template.py  test_latency_recording.py  test_openai_agents_integration.py  test_openai_agents_optional_dependency.py  test_openai_proxy.py  test_prompt_name_encoding.py  test_promptlayer_run.py  test_skills.py  test_span_exporter.py  test_templates_groups_track.py  test_utils.py
tests/fixtures/: __init__.py  auth.py  clients.py  setup.py  templates.py  workflow_update_messages.py
tests/fixtures/cassettes/: test_anthropic_chat_completion.yaml  test_anthropic_chat_completion_async.yaml  test_anthropic_chat_completion_async_stream_with_pl_id.yaml  test_anthropic_chat_completion_with_pl_id.yaml  test_anthropic_chat_completion_with_stream.yaml  test_anthropic_chat_completion_with_stream_and_pl_id.yaml  test_arun_workflow_request.yaml  test_get_all_templates.yaml  test_get_prompt_template_provider_base_url_name.yaml  test_get_template_async.yaml  test_log_request_async.yaml  test_make_message_listener_1.yaml  test_make_message_listener_2.yaml  test_openai_chat_completion.yaml  test_openai_chat_completion_async.yaml  test_openai_chat_completion_async_stream_with_pl_id.yaml  test_openai_chat_completion_with_pl_id.yaml  test_openai_chat_completion_with_stream.yaml  test_openai_chat_completion_with_stream_and_pl_id.yaml  test_openai_compatible_chat_completion_stream.yaml  test_publish_template_async.yaml  test_run_logs_error_on_llm_auth_failure.yaml  test_run_prompt_async.yaml  test_track_and_templates.yaml
tests/test_agents/: test_arun_workflow_request.py  test_misc.py  test_run_workflow_timeout.py
tests/utils/: mocks.py  vcr.py
