[tool.poetry]
name = "promptlayer"
version = "1.0.35"
description = "PromptLayer is a platform for prompt engineering and tracks your LLM requests."
authors = ["Magniv <hello@magniv.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
requests = "^2.31.0"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
ably = "^2.0.6"
aiohttp = "^3.10.10"
httpx = "^0.27.2"
nest-asyncio = "^1.6.0"

[tool.poetry.group.dev.dependencies]
langchain = "^0.0.260"
behave = "^1.2.6"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
openai = "^1.26.0"
anyio = "^4.3.0"
anthropic = "^0.25.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
