[tool.poetry]
name = "promptlayer"
version = "1.0.72"
description = "PromptLayer is a platform for prompt engineering and tracks your LLM requests."
authors = ["Magniv <hello@magniv.io>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
ably = "^2.0.11"
aiohttp = "^3.10.10"
httpx = "^0.28.1"
nest-asyncio = "^1.6.0"
centrifuge-python = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
openai = "^1.60.1"
google-genai = "^1.5.0"
anthropic = {extras = ["vertex"], version = "^0.57.1"}
# TODO(dmu) MEDIUM: Upgrade to vcrpy >= 7 once it supports urllib3 >= 2.2.2
vcrpy = "<7.0.0"
pytest-network = "^0.0.1"
pytest-parametrize-cases = "^0.1.2"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
boto3 = "^1.35.0"
aioboto3 = "^13.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4  # mimic Black
target-version = "py38"

[tool.ruff.lint]
ignore = ["E501", "E711", "E712"]

[tool.ruff.lint.isort]
combine-as-imports = true
relative-imports-order = "closest-to-furthest"
known-first-party = ["promptlayer", "tests"]

[tool.ruff.format]
quote-style = "double"  # mimic Black
indent-style = "space"  # also mimic Black
skip-magic-trailing-comma = false  # also mimic Black
line-ending = "auto"  # mimic Black
