[tool.poetry]
name = "promptlayer"
version = "1.2.3"
description = "PromptLayer is a platform for prompt engineering and tracks your LLM requests."
authors = ["Magniv <hello@magniv.io>"]
license = "Apache-2.0"
readme = "README.md"
include = [
    { path = "promptlayer/integrations/claude_agents/vendor/vendor_metadata.json", format = ["sdist", "wheel"] },
    { path = "promptlayer/integrations/claude_agents/vendor/**/*", format = ["sdist", "wheel"] },
    { path = "promptlayer/integrations/claude_agents/vendor/trace/.claude-plugin/plugin.json", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
requests = "^2.31.0"
opentelemetry-api = "^1.26.0"
opentelemetry-sdk = "^1.26.0"
ably = "^2.0.11"
aiohttp = "^3.10.10"
httpx = "^0.28.1"
nest-asyncio = "^1.6.0"
centrifuge-python = "^0.4.1"
tenacity = "^9.1.2"
cachetools = "^5.0.0"
openai-agents = {version = "^0.3.3", optional = true}
claude-agent-sdk = {version = ">=0.1.45,<1.0.0", optional = true, python = ">=3.10,<4.0"}
opentelemetry-exporter-otlp-proto-http = {version = "^1.26.0", optional = true}
eval-type-backport = {version = "^0.3.1", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
openai = "^1.107.1"
openai-agents = "^0.3.3"
eval-type-backport = "^0.3.1"
google-genai = "^1.5.0"
anthropic = {extras = ["vertex"], version = "^0.84.0"}
# TODO(dmu) MEDIUM: Upgrade to vcrpy >= 7 once it supports urllib3 >= 2.2.2
vcrpy = "<7.0.0"
pytest-network = "^0.0.1"
pytest-parametrize-cases = "^0.1.2"
opentelemetry-processor-baggage = ">=0.60b0"
opentelemetry-exporter-otlp-proto-http = "^1.26.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
boto3 = "^1.35.0"
aioboto3 = "^13.0.0"

[tool.poetry.extras]
openai-agents = ["openai-agents", "opentelemetry-exporter-otlp-proto-http", "eval-type-backport"]
claude-agents = ["claude-agent-sdk"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4  # mimic Black
target-version = "py39"
extend-exclude = ["promptlayer/integrations/claude_agents/vendor"]

[tool.ruff.lint]
ignore = ["E501", "E711", "E712"]

[tool.ruff.lint.isort]
combine-as-imports = true
relative-imports-order = "closest-to-furthest"
known-first-party = ["promptlayer", "tests"]

[tool.ruff.format]
quote-style = "double"  # mimic Black
indent-style = "space"  # also mimic Black
skip-magic-trailing-comma = false  # also mimic Black
line-ending = "auto"  # mimic Black
